Dummy_Package_for_scratch_org/main/default/objects/Connection_Behavior__c/Connection_Behavior__c.object-meta.xml
<CustomObject>
    <description>Defines the deployment, back-promotion, and quality gate behavior for connections or sets the default for connections into a particular environment.</description>
    <label>Connection Behavior</label>
    <nameField>
        <label>Connection Behavior Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connection Behaviors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>