Dummy_Package_for_scratch_org/main/default/objects/Connection_Behavior__c/fields/Back_Promotion_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Back_Promotion_Behavior__c</fullName>
    <description>How should user stories be moved back from higher environments (prod/test) to lower environments (test/dev)</description>
    <inlineHelpText>How should user stories be moved back from higher environments (prod/test) to lower environments (test/dev)</inlineHelpText>
    <label>Back-Promotion Execution</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>