Dummy_Package_for_scratch_org/main/default/objects/Connection_Behavior__c/fields/Back_Promotion_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Back_Promotion_Criteria__c</fullName>
    <inlineHelpText>Only user stories that meet this criteria will be eligible to be automatically back promoted.</inlineHelpText>
    <label>Back-Promotion Criteria</label>
    <type>TextArea</type>
</CustomField>