Dummy_Package_for_scratch_org/main/default/objects/Connection_Behavior__c/fields/Back_Promotion_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Back_Promotion_Schedule__c</fullName>
    <description>The schedule for back promotions (if they are scheduled)</description>
    <inlineHelpText>The schedule for back promotions (if they are scheduled)</inlineHelpText>
    <label>Back-Promotion Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>