Dummy_Package_for_scratch_org/main/default/objects/Connection_Behavior__c/fields/Back_Promotion_Scheduled_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Back_Promotion_Scheduled_Job_ID__c</fullName>
    <description>The Salesforce Scheduled Job ID associated with scheduled back-promotion jobs</description>
    <inlineHelpText>The Salesforce Scheduled Job ID associated with scheduled back-promotion jobs</inlineHelpText>
    <label>Back-Promotion Scheduled Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>