Dummy_Package_for_scratch_org/main/default/objects/Connection_Behavior__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A summary of this connection behavior</description>
    <inlineHelpText>A summary of this connection behavior</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>