Dummy_Package_for_scratch_org/main/default/objects/Connection_Behavior__c/fields/DisableEnvironmentBranch__c.field-meta.xml
<CustomField>
    <fullName>DisableEnvironmentBranch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Environment Branch</label>
    <type>Checkbox</type>
</CustomField>