Dummy_Package_for_scratch_org/main/default/objects/Connection_Behavior__c/fields/Execute_promotions_in_parallel__c.field-meta.xml
<CustomField>
    <fullName>Execute_promotions_in_parallel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Execute promotions in parallel</label>
    <type>Checkbox</type>
</CustomField>