Dummy_Package_for_scratch_org/main/default/objects/Connection_Behavior__c/fields/Max_Scheduled_Back_Promotion_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Scheduled_Back_Promotion_Batch_Size__c</fullName>
    <defaultValue>10</defaultValue>
    <description>The maximum number of user stories that will be deployed together when a deployment is scheduled</description>
    <inlineHelpText>Set to 1 to deploy each story individually. Batching deployments speeds up the process but causes all stories in a batch to succeed or fail together. This can delay the deployment of some stories and make it harder to identify the cause of errors.</inlineHelpText>
    <label>Scheduled Back-Promotion US Group Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>