Dummy_Package_for_scratch_org/main/default/objects/Connection_Behavior__c/fields/Promotion_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Behavior__c</fullName>
    <description>How should user stories be deployed from lower (dev/test) environments to higher environments (test/prod)</description>
    <inlineHelpText>How should user stories be deployed from lower (dev/test) environments to higher environments (test/prod)</inlineHelpText>
    <label>Promotion Execution</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Connection_Behavior_Type</valueSetName>
    </valueSet>
</CustomField>