Dummy_Package_for_scratch_org/main/default/objects/Connection_Behavior__c/fields/Promotion_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Schedule__c</fullName>
    <description>The schedule for deployments (if they are scheduled)</description>
    <inlineHelpText>The schedule for deployments (if they are scheduled)</inlineHelpText>
    <label>Promotion Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>