Dummy_Package_for_scratch_org/main/default/objects/Connection_Behavior__c/fields/Schedule_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Promotion__c</fullName>
    <description>An action link to schedule deployments</description>
    <formula>IF($Setup.Settings__c.Namespace__c != &apos;none&apos;,
IF(
TEXT(Promotion_Behavior__c) == &apos;Scheduled&apos;, HYPERLINK(&quot;/apex/copado__ScheduleConnectionBehavior?id=&quot; + Id + &quot;&amp;promotionType=Promotion&quot;,  IF( ISBLANK(Promotion_Schedule__c) , &quot;Schedule Promotions&quot;, Promotion_Schedule__c) ,&apos;_self&apos;),
&apos;&apos;),
IF(
TEXT(Promotion_Behavior__c) == &apos;Scheduled&apos;, HYPERLINK(&quot;/apex/ScheduleConnectionBehavior?id=&quot; + Id + &quot;&amp;promotionType=Promotion&quot;, IF( ISBLANK(Promotion_Schedule__c) , &quot;Schedule Promotions&quot;, Promotion_Schedule__c) ,&apos;_self&apos;),
&apos;&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>An action link to schedule deployments</inlineHelpText>
    <label>Schedule Promotion</label>
    <type>Text</type>
</CustomField>