Dummy_Package_for_scratch_org/main/default/objects/Connection_Behavior__c/fields/Story_Status_After_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Story_Status_After_Deployment__c</fullName>
    <description>Automatically change the status of user stories after deploying them to the target environment</description>
    <inlineHelpText>What status should user stories be set to after they are successfully deployed?</inlineHelpText>
    <label>User Story Status After Promotion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Story_Status_After_Deployment</valueSetName>
    </valueSet>
</CustomField>