Dummy_Package_for_scratch_org/main/default/objects/Connection_Behavior__c/validationRules/Batch_Size_Valid_Interval.validationRule-meta.xml
<ValidationRule>
    <fullName>Batch_Size_Valid_Interval</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    OR(
        OR( 
           Max_Scheduled_Promotion_Batch_Size__c &lt;= 0, 
           Max_Scheduled_Promotion_Batch_Size__c &gt; 2000
        ),
        OR(
           Max_Scheduled_Back_Promotion_Batch_Size__c  &lt;= 0, 
           Max_Scheduled_Back_Promotion_Batch_Size__c  &gt; 2000
        )
    )
,true,
false
)</errorConditionFormula>
    <errorMessage>Batch Size fields for Promotion or Back Promotion needs to be between 1 and 2000</errorMessage>
</ValidationRule>