Dummy_Package_for_scratch_org/main/default/objects/Connection_Behavior__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Promotion_Behavior__c</columns>
    <columns>Back_Promotion_Behavior__c</columns>
    <columns>Story_Status_After_Deployment__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>